# HackNation2025

./: .gitignore  LICENSE  README.md  config.yaml  main.py  pyproject.toml
backend/: agent.py  agent_manager.py  main.py  phase1_system_prompt.txt  phase2_system_prompt.txt  summary_cache.py  ui.py
backend/agents/: agent_interface.py  agent_mrkl.py  agent_plan_and_solve.py  config.yaml
backend/llms/: llm_bielik.py  llm_gemini.py  llm_pllum.py
cycolina/: atlantis_context.txt  llm_agent.py  llm_bielik.py  llm_gemini.py  llm_interface.py  llm_provider.py  main.py  phase2_system_prompt.txt  pyproject.toml  scrapping.py  ui.py
cycolina/agents/: agent_interface.py  agent_mrkl.py  agent_plan_and_solve.py
cycolina/llms/: llm_gemini.py  llm_interface.py
frontend/: app.py  db.py  extract_engine.py  runner.py  scraper.py  tab1_sources.py  tab2_facts.py  tab3_analysis.py
